Realice cambios en el html de acuerdo a las especificaciones de la profe y norre carpetas css

--- a/detail-series.html
+++ b/detail-series.html
@@ -7,41 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERIES</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="./css/detail-series.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
 
 <body>
     <header>
-        <section>
-            <h1>
-                <a href="./index.html">LIVE STAR</a>
-            </h1>
-            <ul>
-
-                <li>
+        <h1>
+            <a href="./index.html">LIVE STAR</a>
+        </h1>
+        <ul type="none">
+            <li>
+                <div>
                     <form action="./search-results.html" method="GET">
-                        <div>
-                            <input type="text" name="buscar" placeholder="Buscar..">
-                        </div>
-                        <div>
-                            <button type="submit">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
+                        <input type="text" name="buscar" placeholder="Buscar..">
+                </div>
+                <div>
+                    <button type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
 
-                    </form>
-                </li>
-                <li>
-                    <a href="./index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="./genres.html">GÉNEROS</a>
-                </li>
-                <li>
-                    <a href="./favoritos.html">FAVORITOS</a>
-                </li>
-            </ul>
-        </section>
+                </form>
+            </li>
+            <li>
+                <a href="./index.html">INICIO</a>
+
+            </li>
+            <li>
+
+                <a href="./genres.html">GÉNEROS</a>
+
+            </li>
+            <li>
+
+                <a href="./favoritos.html">FAVORITOS</a>
+
+            </li>
+        </ul>
     </header>
     <main>
         <div>
