--- a/favoritos.html
+++ b/favoritos.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAVORITOS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="./css/favoritos.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
+
 <body>
     <header>
-        <section>
-            <h1>
-                <a href="./index.html">LIVE STAR</a>
-            </h1>
-            <ul>
-
-                <li>
+        <h1>
+            <a href="./index.html">LIVE STAR</a>
+        </h1>
+        <ul type="none">
+            <li>
+                <div>
                     <form action="./search-results.html" method="GET">
-                        <div>
-                            <input type="text" name="buscar" placeholder="Buscar..">
-                        </div>
-                        <div>
-                            <button type="submit">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
+                        <input type="text" name="buscar" placeholder="Buscar..">
+                </div>
+                <div>
+                    <button type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
 
-                    </form>
-                </li>
-                <li>
-                    <a href="./index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="./genres.html">GÉNEROS</a>
-                </li>
-                <li>
-                    <a href="./favoritos.html">FAVORITOS</a>
-                </li>
-            </ul>
-        </section>
+                </form>
+            </li>
+            <li>
+                <a href="./index.html">INICIO</a>
+
+            </li>
+            <li>
+
+                <a href="./genres.html">GÉNEROS</a>
+
+            </li>
+            <li>
+
+                <a href="./favoritos.html">FAVORITOS</a>
+
+            </li>
+        </ul>
     </header>
     <main>
         <h2>FAVORITOS</h2>
@@ -61,7 +65,9 @@
                 <li>
                     <img src="./img-series-nuevo/Iron Man.jpg" alt="">
                     <h4>
-                        <a href="./detail-movie.html"><Iron-Man></Iron-Man></a>
+                        <a href="./detail-movie.html">
+                            <Iron-Man></Iron-Man>
+                        </a>
                     </h4>
                 </li>
                 <li>
@@ -97,6 +103,7 @@
             </ul>
         </section>
     </footer>
-    
+
 </body>
+
 </html>
