--- a/index.html
+++ b/index.html
@@ -12,44 +12,38 @@
 
 <body>
     <header>
-        <section>
-            <article class="controles">
-                <h1>
-                    <a href="./index.html">LIVE STAR</a>
-                </h1>
-                <ul type="none">
-                    <li>
-                        <form action="./search-results.html" method="GET">
-                            <div>
-                                <input type="text" name="buscar" placeholder="Buscar..">
-                            </div>
-                            <div>
-                                <button type="submit">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                            </div>
+        <h1>
+            <a href="./index.html">LIVE STAR</a>
+        </h1>
+        <ul type="none">
+            <li>
+                <div>
+                    <form action="./search-results.html" method="GET">
+                        <input type="text" name="buscar" placeholder="Buscar..">
+                </div>
+                <div>
+                    <button type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
 
-                        </form>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="./index.html">INICIO</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="./genres.html">GÉNEROS</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a href="./favoritos.html">FAVORITOS</a>
-                        </div>
-                    </li>
-                </ul>
-            </article>
+                </form>
+            </li>
+            <li>
+                <a href="./index.html">INICIO</a>
 
-        </section>
+            </li>
+            <li>
+
+                <a href="./genres.html">GÉNEROS</a>
+
+            </li>
+            <li>
+
+                <a href="./favoritos.html">FAVORITOS</a>
+
+            </li>
+        </ul>
     </header>
     <main>
         <div>
@@ -123,7 +117,7 @@
             </article>
         </section>
         <div>
-            <H2>PELICULAS MÁS VALORADAS</H2>
+            <h2>PELICULAS MÁS VALORADAS</h2>
         </div>
         <section>
             <article>
