--- a/detail-genres.html
+++ b/detail-genres.html
@@ -7,41 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GENEROS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="./css/detail-genres.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
 
 <body>
     <header>
-        <section>
-            <h1>
-                <a href="./index.html">LIVE STAR</a>
-            </h1>
-            <ul>
-
-                <li>
+        <h1>
+            <a href="./index.html">LIVE STAR</a>
+        </h1>
+        <ul type="none">
+            <li>
+                <div>
                     <form action="./search-results.html" method="GET">
-                        <div>
-                            <input type="text" name="buscar" placeholder="Buscar..">
-                        </div>
-                        <div>
-                            <button type="submit">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
+                        <input type="text" name="buscar" placeholder="Buscar..">
+                </div>
+                <div>
+                    <button type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
 
-                    </form>
-                </li>
-                <li>
-                    <a href="./index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="./genres.html">GÉNEROS</a>
-                </li>
-                <li>
-                    <a href="./favoritos.html">FAVORITOS</a>
-                </li>
-            </ul>
-        </section>
+                </form>
+            </li>
+            <li>
+                <a href="./index.html">INICIO</a>
+
+            </li>
+            <li>
+
+                <a href="./genres.html">GÉNEROS</a>
+
+            </li>
+            <li>
+
+                <a href="./favoritos.html">FAVORITOS</a>
+
+            </li>
+        </ul>
     </header>
     <main>
         <h2>GENEROS DE PELICULAS</h2>
@@ -66,8 +68,8 @@
             <h3>CIENCIA FICCIÓN</h3>
             <ul>
                 <li>
-                  <img src="./img/peli1.jpg" alt=""> 
-                  <h4>The Suicide Squad</h4> 
+                    <img src="./img/peli1.jpg" alt="">
+                    <h4>The Suicide Squad</h4>
                 </li>
                 <li>
                     <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
@@ -82,8 +84,8 @@
         <section>
             <h3>FAMILIA</h3>
             <li>
-               <img src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
-               <H4>Avengers EndGame</H4>
+                <img src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
+                <H4>Avengers EndGame</H4>
             </li>
             <li>
                 <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
