--- a/detail-movie.html
+++ b/detail-movie.html
@@ -11,40 +11,42 @@
 </head>
 
 <body>
-    <header>
+
+    <header class="cabezera">
         <h1>
-            <a href="./index.html">LIVE STAR</a>
+            <a href="./index.html" class="titulo">LIVE STAR</a>
         </h1>
-        <ul type="none">
-            <li>
-                <div>
-                    <form action="./search-results.html" method="GET">
+        <ul type="none" class="controles">
+            <li class="controleshijo">
+                <form action="./search-results.html" method="GET" class="buscador">
+                    <div>
                         <input type="text" name="buscar" placeholder="Buscar..">
-                </div>
-                <div>
-                    <button type="submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
+                    </div>
+                    <div>
+                        <button type="submit" class="boton">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
 
                 </form>
             </li>
             <li>
-                <a href="./index.html">INICIO</a>
+                <a href="./index.html" class="controleshijo">INICIO</a>
 
             </li>
             <li>
 
-                <a href="./genres.html">GÉNEROS</a>
+                <a href="./genres.html" class="controleshijo">GÉNEROS</a>
 
             </li>
             <li>
 
-                <a href="./favoritos.html">FAVORITOS</a>
+                <a href="./favoritos.html" class="controleshijo">FAVORITOS</a>
 
             </li>
         </ul>
     </header>
+
     <main>
         <div>
             <H2>DETALLES DE PELICULAS</H2>
