--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <input type="text" name="buscar" placeholder="Buscar..">
                     </div>
                     <div>
-                        <button type="submit">
+                        <button type="submit" class="boton">
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
