Empece con el css para el index

--- a/index.html
+++ b/index.html
@@ -47,16 +47,18 @@
     </header>
     <main>
         <div>
-            <H2>PELICULAS POPULARES</H2>
+            <H2 class="tituloinicial">PELICULAS POPULARES</H2>
         </div>
-        <section>
-            <article>
+        <section class="primerasection">
+            <article class="imagenpp">
+                 
                 <img src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
+            
                 <h3>
                     <a href="./detail-movie.html">Avengers:EndGame</a>
                 </h3>
             </article>
-            <article>
+            <article class="imagenpp">
                 <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
                 <h3>
                     <a href="./detail-movie.html">Batman: The Dark Knight</a>
