--- a/index.html
+++ b/index.html
@@ -50,34 +50,34 @@
             <H2 class="tituloinicial">PELICULAS POPULARES</H2>
         </div>
         <section class="primerasection">
-            <article class="imagenpp">
+            <article>
                  
-                <img src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
+                <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
             
                 <h3>
-                    <a href="./detail-movie.html">Avengers:EndGame</a>
+                    <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
                 </h3>
             </article>
             <article class="imagenpp">
-                <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
+                <img class="imagen"  src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
                 <h3>
-                    <a href="./detail-movie.html">Batman: The Dark Knight</a>
+                    <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
                 </h3>
             </article>
             <article>
-                <img src="./img/peli1.jpg" alt="">
+                <img class="imagen"  src="./img/peli1.jpg" alt="">
                 <h3>
                     <a href="./detail-movie.html">The Suicide Squad</a>
                 </h3>
             </article>
             <article>
-                <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
+                <img class="imagen" src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
                 <h3>
                     <a href="./detail-movie.html">Spiderman: Far From Home</a>
                 </h3>
             </article>
             <article>
-                <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
                 <h3>
                     <a href="./detail-movie.html">Venom</a>
                 </h3>
@@ -88,31 +88,31 @@
         </div>
         <section>
             <article>
-                <img src="./img-series/poster titans.jpg" alt="">
+                <img class="imagen" src="./img-series/poster titans.jpg" alt="">
                 <h3>
                     <a href="./detail-series.html">Titans</a>
                 </h3>
             </article>
             <article>
-                <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
+                <img class="imagen" src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
                 <h3>
                     <a href="./detail-series.html">Daredevil</a>
                 </h3>
             </article>
             <article>
-                <img src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
+                <img class="imagen" src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
                 <h3>
                     <a href="./detail-series.html">Watchmen</a>
                 </h3>
             </article>
             <article>
-                <img src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
+                <img class="imagen" src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
                 <h3>
                     <a href="./detail-series.html">Gotham</a>
                 </h3>
             </article>
             <article>
-                <img src="./img-series/poster-loki.jpg" alt="">
+                <img class="imagen"  src="./img-series/poster-loki.jpg" alt="">
                 <h3>
                     <a href="./detail-series.html">Loki</a>
                 </h3>
@@ -123,31 +123,31 @@
         </div>
         <section>
             <article>
-                <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
+                <img class="imagen" src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
                 <h3>
                     <a href="./detail-movie.html">Avengers: IninityWar</a>
                 </h3>
             </article>
             <article>
-                <img src="./img-series-nuevo/DeadPool.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt="">
                 <h3>
                     <a href="./detail-movie.html">DeadPool</a>
                 </h3>
             </article>
             <article>
-                <img src="./img-series-nuevo/Iron Man.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt="">
                 <h3>
                     <a href="./detail-movie.html">Iron Man</a>
                 </h3>
             </article>
             <article>
-                <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
+                <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
                 <h3>
                     <a href="./detail-movie.html">Justice League</a>
                 </h3>
             </article>
             <article>
-                <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt="">
                 <h3> Spiderman 2</h3>
             </article>
         </section>
