subo adelantos de detailmovie css

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -49,22 +49,23 @@
 
     <main>
         <div>
-            <H2>DETALLES DE PELICULAS</H2>
+            <H2 class="DETALLES_DE_PELICULAS">DETALLES DE PELICULAS</H2>
         </div>
 
-        <section>
+        <section class="sectionpadre">
             <article>
-                <h3>Avengers:EndGame</h3>
-                <h4>Duración (3h 2m)</h4>
-                <img src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
+                
+                <h3 class="titulos_detalles">Avengers:EndGame</h3>
+                <h4 class="letras_detalles">Duración (3h 2m)</h4>
+                <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
             </article>
             <article>
-                <h4>Sínopsis:</h4>
+                <h4 class="letras_detalles">Sínopsis:</h4>
 
-                <p>Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a
+                <p class="letras_detalles">Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a
                     las
                     acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
                     reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una
@@ -73,13 +74,13 @@
                     "Vengadores"
                 </p>
 
-                <h4>Calificación:</h4>
-                <p>8.4/10⭐</p>
+                <h4 class="letras_detalles">Calificación:</h4>
+                <p class="letras_detalles">8.4/10⭐</p>
                 <h4>
-                    <a href="./genres.html">Género:</a>
+                    <a href="./genres.html" class="letraspelis">Género:</a>
                 </h4>
                 <P>
-                    <a href="./detail-genres.html">Familia</a>
+                    <a href="./detail-genres.html" class="letraspelis">Familia</a>
                 </P>
                 <h4>Fecha de Estreno:</h4>
                 <p>22/4/2019</p>
@@ -90,7 +91,7 @@
             <article>
                 <h3>The Dark Knight</h3>
                 <h4>Duración (2h 32m)</h4>
-                <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
+                <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
@@ -122,7 +123,7 @@
             <article>
                 <h3>The Suicide Squad</h3>
                 <h4>Duración (2h 12m)</h4>
-                <img src="./img/peli1.jpg" alt="">
+                <img class="imagen" src="./img/peli1.jpg" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
@@ -156,7 +157,7 @@
                 <h4>
                     <a>Duración (2h 10m)</a>
                 </h4>
-                <img src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
+                <img class="imagen" src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
@@ -188,7 +189,7 @@
             <article>
                 <h3>Venom</h3>
                 <h4>Duración (2h 20m)</h4>
-                <img src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
@@ -229,7 +230,7 @@
                     Duración (2h 29m)
                 </h4>
 
-                <img src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
+                <img class="imagen" src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
@@ -277,7 +278,7 @@
                 <h4>
                     Duración (1h 48m)
                 </h4>
-                <img src="./img-series-nuevo/DeadPool.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
@@ -323,7 +324,7 @@
                 <h4>
                     Duración (2h 6m)
                 </h4>
-                <img src="./img-series-nuevo/Iron Man.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
@@ -368,7 +369,7 @@
                 <h4>
                     Duración (2h)
                 </h4>
-                <img src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
+                <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
@@ -418,7 +419,7 @@
                 <h4>
                     Duración (2h 7m)
                 </h4>
-                <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt="">
                 <div>
                     <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
                 </div>
