--- a/detail-movie.html
+++ b/detail-movie.html
@@ -46,26 +46,28 @@
             </li>
         </ul>
     </header>
-
     <main>
         <div>
             <H2 class="DETALLES_DE_PELICULAS">DETALLES DE PELICULAS</H2>
         </div>
 
         <section class="sectionpadre">
-            <article>
-                
-                <h3 class="titulos_detalles">Avengers:EndGame</h3>
-                <h4 class="letras_detalles">Duración (3h 2m)</h4>
+            <article class="peliculaprincipal">
+
+                <h3 class="titulosdetalles">Avengers:EndGame</h3>
+                <h4 class="duracion">Duración (3h 2m)</h4>
                 <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
-                <div>
-                    <a href="./favoritos.html">AÑADIR A FAVORITOS</a>
+                <div class="botonfavorito">
+                    <div class="letrasfavorito">
+                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                    </div>
                 </div>
             </article>
-            <article>
-                <h4 class="letras_detalles">Sínopsis:</h4>
+            <article class="cajadatos">
+                <h4 class="sinopsis">Sínopsis:</h4>
 
-                <p class="letras_detalles">Después de los eventos devastadores de 'Avengers: Infinity War', el universo está en ruinas debido a
+                <p class="informacion">Después de los eventos devastadores de 'Avengers: Infinity War', el universo
+                    está en ruinas debido a
                     las
                     acciones de Thanos, el Titán Loco. Con la ayuda de los aliados que quedaron, los Vengadores deberán
                     reunirse una vez más para intentar deshacer sus acciones y restaurar el orden en el universo de una
@@ -74,16 +76,18 @@
                     "Vengadores"
                 </p>
 
-                <h4 class="letras_detalles">Calificación:</h4>
-                <p class="letras_detalles">8.4/10⭐</p>
-                <h4>
-                    <a href="./genres.html" class="letraspelis">Género:</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html" class="letraspelis">Familia</a>
-                </P>
-                <h4>Fecha de Estreno:</h4>
-                <p>22/4/2019</p>
+                <h4 class="calificacion">Calificación:</h4>
+                <p class="puntuacion">8.4/10⭐</p>
+                <ul type="none" class="linkfinal">
+                    <li>
+                        <a href="./genres.html" class="genero">GENERO;</a>
+                    </li>
+                    <li>
+                        <a href="./detail-genres.html" class="genero">FAMILIA</a>
+                    </li>
+                </ul>
+                <h4 class="estreno">Fecha de Estreno:</h4>
+                <p class="estreno">22/4/2019</p>
             </article>
         </section>
 
