Realice mejoras en el CSS del Index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <main>
         <div>
-            <H2 class="tituloinicial">PELICULAS POPULARES</H2>
+            <H2 class="tituloinicial">PELICULAS POPULARES:</H2>
         </div>
         <section class="primerasection">
             <article>
@@ -67,88 +67,90 @@
             <article>
                 <img class="imagen"  src="./img/peli1.jpg" alt="">
                 <h3>
-                    <a href="./detail-movie.html">The Suicide Squad</a>
+                    <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
                 <h3>
-                    <a href="./detail-movie.html">Spiderman: Far From Home</a>
+                    <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
                 <h3>
-                    <a href="./detail-movie.html">Venom</a>
+                    <a class="titulopelicula" href="./detail-movie.html">Venom</a>
                 </h3>
             </article>
         </section>
         <div>
-            <H2>SERIES POPULARES</H2>
+            <H2 class="tituloinicial">SERIES POPULARES:</H2>
         </div>
-        <section>
+        <section class="primerasection">
             <article>
                 <img class="imagen" src="./img-series/poster titans.jpg" alt="">
                 <h3>
-                    <a href="./detail-series.html">Titans</a>
+                    <a class="titulopelicula" href="./detail-series.html">Titans</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
                 <h3>
-                    <a href="./detail-series.html">Daredevil</a>
+                    <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
                 <h3>
-                    <a href="./detail-series.html">Watchmen</a>
+                    <a  class="titulopelicula" href="./detail-series.html">Watchmen</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
                 <h3>
-                    <a href="./detail-series.html">Gotham</a>
+                    <a class="titulopelicula" href="./detail-series.html">Gotham</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen"  src="./img-series/poster-loki.jpg" alt="">
                 <h3>
-                    <a href="./detail-series.html">Loki</a>
+                    <a class="titulopelicula" href="./detail-series.html">Loki</a>
                 </h3>
             </article>
         </section>
         <div>
-            <h2>PELICULAS MÁS VALORADAS</h2>
+            <h2 class="tituloinicial">PELICULAS MÁS VALORADAS:</h2>
         </div>
-        <section>
+        <section class="primerasection">
             <article>
                 <img class="imagen" src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
                 <h3>
-                    <a href="./detail-movie.html">Avengers: IninityWar</a>
+                    <a class="titulopelicula" href="./detail-movie.html">Avengers: IninityWar</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt="">
                 <h3>
-                    <a href="./detail-movie.html">DeadPool</a>
+                    <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt="">
                 <h3>
-                    <a href="./detail-movie.html">Iron Man</a>
+                    <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
                 <h3>
-                    <a href="./detail-movie.html">Justice League</a>
+                    <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
                 </h3>
             </article>
             <article>
                 <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt="">
-                <h3> Spiderman 2</h3>
+                <h3>
+                    <a  class="titulopelicula" href="./detail-movie.html">Spiderman 2</a>
+                </h3>
             </article>
         </section>
     </main>
